Fix deprecated APIs (#4632)